--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "schraubentool",
-    "short_name": "schraubentool",
+    "name": "Schraubentool",
+    "short_name": "Schraubentool",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
