--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   sizer: ^2.0.15
   dropdown_button2: ^1.8.2
   flutter_math_fork: ^0.6.3+1
+  flutter_native_splash: ^2.2.15
+
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+
+flutter_native_splash:
+  color: "#ffffff" # white
+  image: assets/splash.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
